tests/reject/match_expr_nonexhaustive.ty
# A value `match` must still be exhaustive (both compilers).
fn main():
    o := Some(3)
    x := match o:
        Some(n):
            n
    println(str(x))
